# actix-prac

./: Cargo.toml
migrations/2023-11-15-054349_create_users/: up.sql
migrations/2023-11-15-054355_create_posts/: up.sql
migrations/2023-11-16-112709_update_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/users/: lib.rs  mod.rs
src/database/: lib.rs
src/models/: post.rs  user.rs
src/routes/: users.rs
src/webstruct/: error.rs
