[package]
name = "ins-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.31"
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
rand = "0.8.5"
rust-argon2 = "0.5"